# rs-procs2arrow-ipc-stream

./: Cargo.toml  README.md  example.sh  rs-procs2arrow-ipc-stream
src/: lib.rs  main.rs
