[package]
name = "rs-procs2arrow-ipc-stream"
version = "0.1.0"
edition = "2024"

description = "Prints the proc info values as an ipc stream."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-procs2arrow-ipc-stream"
homepage = "https://github.com/takanoriyanagitani/rs-procs2arrow-ipc-stream"
documentation = "https://docs.rs/rs-procs2arrow-ipc-stream/latest"
keywords = ["arrow", "ipc", "process"]

exclude = [
	"rs-procs2arrow-ipc-stream",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies.sysinfo]
version = "0"
default-features = false
features = [
	"component",
	"disk",
	"network",
	"system",
	"user",
]

[dependencies.arrow]
version = "56"
default-features = false
features = [
	"ipc",
]

